# Obsidian

./: .clang-format  .clang-tidy  .cmake-format.py  .editorconfig  .gitignore  .gitmodules  ARCHWAY.lua  AUTHORS.md  AUTHORS.txt  CEIL_LIGHT.lua  CHANGES.txt  CMakeLists.txt  CMakePresets.json  COMPILING.md  CONTRIBUTING.md  DOOR.lua  EXIT_PILLAR.lua  INSTALL.md  INSTALL.txt  LICENSE.txt  Makefile  Makefile.local  Makefile.macos  Makefile.unixy  Makefile.xming  Makefile32  Makefile64  Makefile_win32.xming  Makefile_win64.xming  OUTDOOR_EXIT.lua  PICTURE.lua  PILLAR.lua  README.md  README.txt  SMALL_EXIT.lua  STAIR.lua  STAIR_OUTY.lua  SWITCH.lua  TODO.txt  Toolchain-mingw32.cmake  (+6 more)
libraries/imgui/: CMakeLists.txt  LICENSE.txt
libraries/libgrapheme/: CMakeLists.txt  grapheme.h
libraries/libgrapheme/src/: bidirectional.c  bidirectional.h  case.c  case.h  character.c  character.h  line.h  sentence.c  sentence.h  types.h  utf8.c  word.c  word.h
libraries/steve/: CMakeLists.txt  README.md
libraries/steve/src/: Chord.cpp  Chord.h  ChordChange.h  Config.cpp  Config.h  ConfigItemList.h  ConfigJson.cpp  ConfigJson.h  Instrument.h  ItemDescription.h  Music.cpp  Music.h  Rand.cpp  Rand.h  Scale.cpp  Scale.h  Steve.cpp  Steve.h  TimeSignature.h
source/: .clang-format  CMakeLists.txt  bsp.cc  bsp.h  bsp_level.cc  bsp_local.h  bsp_misc.cc  bsp_node.cc  bsp_utility.cc  bsp_utility.h  bsp_wad.cc  bsp_wad.h  csg_bsp.cc  csg_clip.cc  csg_doom.cc  csg_local.h  csg_main.cc  csg_main.h  csg_nukem.cc  csg_quake.cc  csg_quake.h  csg_shade.cc  csg_spots.cc  dm_defs.h  dm_extra.cc  dm_extra.h  dm_prefab.cc  ff.h  ff_main.cc  g_doom.cc  g_doom.h  g_nukem.cc  g_nukem.h  g_quake.cc  g_quake2.cc  g_wolf.cc  hdr_fltk.h  hdr_lua.h  hdr_ui.h  headers.h  (+89 more)
source_files/ajbsp/: CMakeLists.txt  README.md  aj_bsp.h  ajbsp.cc  bsp.h  bsp_level.cc  bsp_local.h  bsp_misc.cc  bsp_node.cc  bsp_utility.cc  bsp_utility.h  bsp_wad.cc  bsp_wad.h  level.cc  local.h  misc.cc  node.cc  raw_def.h  system.h  utility.cc  utility.h  wad.cc  wad.h
source_files/ajpoly_src/: CMakeLists.txt  ajpoly.h  pl_endian.h  pl_map.cc  pl_structs.h  pl_util.h  pl_wad.cc
source_files/ff_src/: CMakeLists.txt  filename.l  lex.yy.c  lex.yy.h  main.cpp  nodes.h
source_files/filename_formatter/: CMakeLists.txt  ff.h  ff_main.cpp  ff_main.h  filename.l  lex.yy.c  lex.yy.h  main.cpp  nodes.h
source_files/fltk/cairo/: CMakeLists.txt  Fl_Cairo.cxx
source_files/fltk/test/: CMakeLists.txt  CubeMain.cxx  CubeView.cxx  CubeView.h  adjuster.cxx  animated.cxx  arc.cxx  ask.cxx  bitmap.cxx  blocks.cxx  boxtype.cxx  browser.cxx  button.cxx  buttons.cxx  cairo_test.cxx  checkers.cxx  clipboard.cxx  clock.cxx  colbrowser.cxx  color_chooser.cxx  coordinates.cxx  cube.cxx  cursor.cxx  curve.cxx  demo.cxx  device.cxx  doublebuffer.cxx  editor.cxx  file_chooser.cxx  flex_demo.cxx  fltk-versions.cxx  fonts.cxx  forms.cxx  fractals.cxx  fracviewer.cxx  fracviewer.h  fromdos.c  fullscreen.cxx  gl_overlay.cxx  glpuzzle.cxx  (+58 more)
source_files/lua/: CMakeLists.txt  lstate.c
source_files/lua/src/: CMakeLists.txt  Makefile  lib_io.c  lj_arch.h  lj_obj.h
source_files/obsidian_main/: .clang-format  CMakeLists.txt  aj_local.h  aj_map.cc  aj_map.h  aj_poly.cc  aj_poly.h  aj_structs.h  aj_util.cc  aj_util.h  aj_wad.cc  aj_wad.h  csg_bsp.cc  csg_clip.cc  csg_doom.cc  csg_local.h  csg_main.cc  csg_main.h  csg_nukem.cc  csg_quake.cc  csg_quake.h  csg_shade.cc  csg_spots.cc  defines.h  dm_extra.cc  dm_prefab.cc  dm_prefab.h  g_doom.cc  g_doom.h  g_nukem.cc  g_nukem.h  g_quake.cc  g_quake2.cc  g_quake3.cc  g_wolf.cc  hdr_SDL.h  hdr_fltk.h  hdr_lua.h  hdr_ui.h  headers.h  (+82 more)
source_files/physfs/: CMakeLists.txt  physfs.h  physfs_byteorder.c  physfs_platform_haiku.cpp
source_files/physfs/src/: physfs_platform_windows.c
source_files/physfs_src/: CMakeLists.txt  physfs_archiver_7z.c  physfs_archiver_grp.c  physfs_archiver_iso9660.c  physfs_archiver_qpak.cc  physfs_internal.h  physfs_lzmasdk.h  physfs_miniz.h  physfs_platform_apple.m  physfs_platform_posix.c
source_files/qsavetex/: CMakeLists.txt  im_tex.cc  im_tex.h  main.cc  main.h  pakfile.cc  pakfile.h  q1_structs.h  u_assert.h  u_endian.h  u_file.cc  u_file.h  u_macro.h  u_type.h  u_util.cc  u_util.h
source_files/slump/: CMakeLists.txt  COPYING  dump.cc  slump.c.bak  slump.cc  slump.h  slump_main.cc  slump_main.h
source_files/slump/Unused/: Makefile.big-endian  Makefile.rng  TODO  make_32bit_tables.c  rng-api-fst.c  rng.c
source_files/zdbsp/: CMakeLists.txt  blockmapbuilder.cc  blockmapbuilder.h  doomdata.h  nodebuild.cc  nodebuild.h  nodebuild_classify_nosse2.cc  nodebuild_events.cc  nodebuild_extract.cc  nodebuild_gl.cc  nodebuild_utility.cc  processor.cc  processor.h  processor_udmf.cc  rejectbuilder_nogl.cc  rejectbuilder_nogl.h  sc_man.cc  sc_man.h  tarray.h  templates.h  workdata.h  xs_Float.h  zdbsp.h  zdmain.cc  zdmain.h  zdwad.cc  zdwad.h
source_files/zdbsp/Unused/: CMakeLists.txt  blockmapbuilder.cpp  getopt.c  getopt.h  getopt1.cc  main.cpp  nodebuild.cpp  nodebuild.cpp-nogl  nodebuild.h-nogl  nodebuild_classify_nosse2.cpp  nodebuild_classify_sse1.cc  nodebuild_classify_sse1.cpp  nodebuild_classify_sse2.cc  nodebuild_classify_sse2.cpp  nodebuild_classify_sse2_vect.cc  nodebuild_classify_sse2_vect.cpp  nodebuild_events.cpp  nodebuild_extract.cpp  nodebuild_gl.cpp  nodebuild_utility.cpp  processor.cpp  processor_udmf.cpp  rejectbuilder.cc  rejectbuilder.cc-nogl  rejectbuilder.cc-slow  rejectbuilder.cc-vis  rejectbuilder.cpp  rejectbuilder.cpp-nogl  rejectbuilder.h  rejectbuilder.h-nogl  rejectbuilder.h-slow  rejectbuilder.h-vis  resource.h  sc_man.cpp  (+12 more)
source_files/zdbsp_src/: CMakeLists.txt  blockmapbuilder.cc  nodebuild.h  nodebuild_classify_nosse2.cc  nodebuild_events.cc  nodebuild_extract.cc  nodebuild_gl.cc  nodebuild_utility.cc  processor.cc  processor.h  rejectbuilder.cc  rejectbuilder_nogl.cc  sc_man.h  templates.h  vis.cc  visflow.cc  zdbsp.dsp  zdbsp.dsw  zdbsp.h  zdmain.cc  zdmain.h  zdwad.cc  zdwad.h
zdbsp_src/zlib/: CMakeLists.txt  compress.c  deflate.c  gzguts.h  zconf.h  zlib.h  zutil.c
(+8051 files in other folders)
